syntax = "proto3";

package common;

option csharp_namespace = "Itmo.CSharpMicroservices.Lab4.Grpc";

message DecimalValue {
  int64 units = 1;
  sfixed32 nanos = 2;
}